# AbletonMCP

./: .gitignore  CLAUDE.md  Feature_List.md  GETTING_STARTED.md  MCP_TOOLS_DIAGNOSIS_REPORT.md  MIDI_TOOLS_FINAL_DIAGNOSIS.md  README.md  VALIDATION_SYSTEM_SUMMARY.md  install_ableton_osc.py  pyproject.toml  requirements.txt  setup.py  test_midi_integration.py  test_osc_integration.py  test_server.py
ableton_control/osc_client/: client.py
examples/: offline_demo.py  quick_start_demo.py
knowledge_base/effects/: __init__.py  delay.py  distortion.py  dynamics.py  eq.py  filters.py  modulation.py  reverb.py  utility.py
knowledge_base/genres/: __init__.py  ambient.py  breakbeat.py  drum_and_bass.py  dubstep.py  house.py  techno.py  trance.py
knowledge_base/instruments/: __init__.py  bass.py  drums.py  keys.py  leads.py  pads.py  samplers.py  synthesizers.py
knowledge_base/samples/: __init__.py  bass.py  drums.py  fx.py  genres.py  loops.py  melodic.py  percussion.py  vocals.py
mcp_server/: main.py  main_backup.py  main_fastmcp_simple.py
mcp_server/handlers/: composition.py  effects.py  instruments.py  midi.py  project.py  samples.py  track.py  transport.py
mcp_server/tools/: ableton_tools.py
mcp_server/validation/: MCP_TOOL_GUIDELINES.md  README.md  __init__.py  generate_template.py  run_validation_suite.py  template_generator.py  test_tools.py  testing_framework.py  validate_tools.py  validator.py
